# aws-log-ingestion

./: .flake8  .gitignore  .pre-commit-config.yaml  Developer.md  Dockerfile  Jenkinsfile  LICENSE  Pipfile  README.md  build-zip.sh  build.sh  build_archive.sh  pyproject.toml  sam-template.yaml  serverless.yml  template.yaml  terraform.tf
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: build_push_base_image.yml  merge-to-master.yml  pr.yaml  release.yml  sync.yml  trivy.yaml
src/: function.py  requirements.txt
test/: aws_log_events.py  build-encoded-file.py  entry_type_test.py  log_ingestion_test.py  mock_http_response.py
test/events/: entry_lambda_oom.json  entry_lambda_sam.json  entry_lambda_timeout.json  entry_rds.json  entry_vpc_flow_logs.json  invoke_lambda.json  lambda_request_id.json
