[tool.poetry]
name = "aws-log-ingestion"
version = "2.6.2"
description = ""
authors = ["New Relic <serverless@newrelic.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
asynctest = "^0.13.0"
aws-sam-cli = "^1.33.0"
black = "^21.9b0"
boto3 = "^1.19.2"
coverage = "^6.0.2"
flake8 = "^4.0.1"
mock = "^4.0.3"
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
