[tool.poetry]
name = "aws-log-ingestion"
version = "2.9.3"
description = ""
authors = ["New Relic <serverless@newrelic.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.5"

[tool.poetry.group.dev.dependencies]
aws-sam-cli = "^1.118.0"
black = "^24.3.0"
boto3 = "^1.19.2"
coverage = "^6.0.2"
flake8 = "^4.0.1"
mock = "^4.0.3"
pytest = "^7.2.0"
pytest-asyncio = "^0.16.0"
pyyaml = "!=5.4.1, !=5.4.0" # pyyaml is broken with cython 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
